--- a/static/write.html
+++ b/static/write.html
@@ -56,7 +56,7 @@
         alert("로그인이 필요합니다.");
         window.location.href = "/index.html";
       } else {
-        $('#logout').show();
+        $("#logout").show();
       }
 
       function cancel() {
@@ -104,7 +104,7 @@
         type="button"
         onclick="sign_out()"
         class="btn btn-primary btn-order"
-        style="display: none;"
+        style="display: none"
         id="logout"
       >
         로그아웃
